--- a/ElBilleton/src/main/webapp/Recursos/Gerente/reporte3.jrxml
+++ b/ElBilleton/src/main/webapp/Recursos/Gerente/reporte3.jrxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9b428fd1-e07a-4e8b-9258-57b587e865d5">
-	<property name="ireport.zoom" value="1.1000000000000028"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9b428fd1-e07a-4e8b-9258-57b587e865d5">
+	<property name="ireport.zoom" value="1.2100000000000042"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="monto" class="java.lang.Double">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT C.* FROM CLIENTE C INNER JOIN CUENTA CU ON C.codigo=CU.cliente_codigo INNER JOIN TRANSACCION T ON T.cuenta_codigo=CU.codigo WHERE T.monto>$P{monto} GROUP BY C.codigo;]]>
+		<![CDATA[SELECT C.*,SUM(T.monto) AS suma FROM CLIENTE C INNER JOIN CUENTA CU ON C.codigo=CU.cliente_codigo INNER JOIN TRANSACCION T ON T.cuenta_codigo=CU.codigo GROUP BY C.codigo HAVING suma>$P{monto};]]>
 	</queryString>
 	<field name="codigo" class="java.lang.Long">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -33,6 +33,7 @@
 	<field name="password" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<field name="suma" class="java.lang.Double"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -52,11 +53,11 @@
 				<text><![CDATA[BANCO EL BILLETON]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="5" y="-16" width="434" height="20" forecolor="#FFFFFF" uuid="697f234c-a252-4334-8d8f-1b78e49db270"/>
+				<reportElement x="5" y="-16" width="485" height="20" forecolor="#FFFFFF" uuid="697f234c-a252-4334-8d8f-1b78e49db270"/>
 				<textElement>
 					<font fontName="Nimbus Sans" size="15" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Clientes con transacciones monetarias mayores a límite: ]]></text>
+				<text><![CDATA[ Clientes con transacciones monetarias sumadas mayores a límite: ]]></text>
 			</staticText>
 			<image>
 				<reportElement x="681" y="-12" width="223" height="82" uuid="eeabbf87-ea34-4c3c-912d-5ae596896c70"/>
@@ -77,7 +78,7 @@
 				<textFieldExpression><![CDATA[$F{codigo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="439" y="-15" width="100" height="20" uuid="b1d2368a-2fc5-4f4a-ba72-e4c72fdffa8e"/>
+				<reportElement x="490" y="-15" width="100" height="20" uuid="92e578ba-b9df-41fb-bf23-dfc9da3cfbbd"/>
 				<textElement>
 					<font size="14"/>
 				</textElement>
@@ -119,18 +120,25 @@
 				<text><![CDATA[Direccion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="605" y="3" width="76" height="23" uuid="c25aeece-5759-4d33-ad54-94b59594c86c"/>
+				<reportElement x="477" y="0" width="76" height="23" uuid="c25aeece-5759-4d33-ad54-94b59594c86c"/>
 				<textElement>
 					<font size="18" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Sexo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="681" y="3" width="133" height="23" uuid="8bf552e7-4013-4c83-9103-ddc1cf2e54ca"/>
+				<reportElement x="562" y="0" width="133" height="23" uuid="8bf552e7-4013-4c83-9103-ddc1cf2e54ca"/>
 				<textElement>
 					<font size="18" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Fecha de Nac.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="700" y="0" width="76" height="23" uuid="59132e5d-0efc-4924-baa7-79fa0f382a89"/>
+				<textElement>
+					<font size="18" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Suma]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -143,13 +151,10 @@
 				<reportElement x="-29" y="27" width="829" height="1" uuid="458bea88-c809-4a45-a9e8-c7edc613bd3c"/>
 			</line>
 			<line>
-				<reportElement x="604" y="0" width="1" height="28" uuid="fe4d3865-d045-4008-9cad-498facf47626"/>
+				<reportElement x="476" y="0" width="1" height="28" uuid="fe4d3865-d045-4008-9cad-498facf47626"/>
 			</line>
 			<line>
 				<reportElement x="366" y="0" width="1" height="28" uuid="2a1d77f6-e32d-4f4b-ada2-49e3a33c444c"/>
-			</line>
-			<line>
-				<reportElement x="681" y="0" width="1" height="28" uuid="7980f0d5-cd0d-43bd-a863-3edf1c4d01f1"/>
 			</line>
 			<line>
 				<reportElement x="251" y="0" width="1" height="28" uuid="d8b17ce9-b4b1-48a1-9d51-c3e26c7a7abb"/>
@@ -171,15 +176,25 @@
 				<textFieldExpression><![CDATA[$F{direccion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="612" y="2" width="62" height="20" uuid="0916b2d6-2108-4136-a52b-22b3bb91dbae"/>
+				<reportElement x="477" y="1" width="62" height="20" uuid="0916b2d6-2108-4136-a52b-22b3bb91dbae"/>
 				<textFieldExpression><![CDATA[$F{sexo}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="800" y="1" width="1" height="27" uuid="c9e60fd4-8acb-4c46-b174-4389f8ead981"/>
 			</line>
 			<textField>
-				<reportElement x="685" y="2" width="119" height="20" uuid="f25d9b46-406c-431b-b699-67e4f8658957"/>
+				<reportElement x="567" y="2" width="119" height="20" uuid="f25d9b46-406c-431b-b699-67e4f8658957"/>
 				<textFieldExpression><![CDATA[$F{fecha_nacimiento}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="553" y="0" width="1" height="28" uuid="7980f0d5-cd0d-43bd-a863-3edf1c4d01f1"/>
+			</line>
+			<line>
+				<reportElement x="695" y="0" width="1" height="28" uuid="8dfb8e1f-dfbb-4275-a9cd-7695f4767f0b"/>
+			</line>
+			<textField>
+				<reportElement x="698" y="1" width="100" height="20" uuid="c1745dd3-fd3e-43df-8f35-50f5926d8ede"/>
+				<textFieldExpression><![CDATA[$F{suma}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
